Fix #7463: clipping was caused by the `fr:grid` in the dialog

--- a/form-builder/jvm/src/main/assets/forms/orbeon/builder/resources/form-builder.less
+++ b/form-builder/jvm/src/main/assets/forms/orbeon/builder/resources/form-builder.less
@@ -1347,7 +1347,8 @@ body.orbeon {
     // Override the `position: relative` set in `grid.less` so variable completion isn't clipped
     // When we remove the `position: relative` in `grid.less`, we can remove this as well
     .fb-dialog-control-settings,
-    .fb-dialog-email-settings {
+    .fb-dialog-email-settings,
+    .fb-dialog-http-services {
         .xbl-fr-grid .fr-grid:not(.fr-grid-css) .fr-grid-body .fr-grid-td {
             position: static;
         }
